# zk-light-client

./: .gitignore  Cargo.toml  LICENSE  README.md
eth-lc/: Cargo.toml
eth-lc/src/: lib.rs
eth-lc/src/types/: mod.rs  primitives.rs  utils.rs
host/: Cargo.toml
host/src/: main.rs
methods/guest/: Cargo.toml
test-data/: boot.json  bootstrap.json  header.json  test.json
