[workspace]
resolver = "2"
members = ["eth-lc", "host", "methods"]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
eyre = "0.6.8"
hex = "0.4.3"
superstruct = "0.7.0"
serde = { version = "1.0.154", features = ["derive"] }
ssz_rs = { package = "ssz_rs", version = "0.9.0" }
ssz_types = { package = "ssz_types", version = "0.6.0" }
alloy-primitives = "0.7.0"
