[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
hex.workspace = true
methods = { path = "../methods" }
risc0-zkvm = { version = "0.21.0" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
serde_json = "1.0"
eyre = "0.6.8"
eth-lc = { package = "eth-lc", path = "../eth-lc" }
ssz-rs = { package = "ssz_rs", version = "0.9.0" }
